Thu Apr 07 03:35:36 BST 2005  Olly Betts <olly@survex.com>

	* bin/quartzcompact.cc: Added "fuller compaction" mode, which ignores
	  the usual "at least 4 items per block" rule.

Thu Apr 07 03:28:32 BST 2005  Olly Betts <olly@survex.com>

	* PLATFORMS: Added success result for GCC 3.2.3 on FreeBSD 4.8; fixed
	  a typo.

Wed Apr 06 23:04:15 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Added FIXME comment.

Wed Apr 06 22:52:53 BST 2005  Olly Betts <olly@survex.com>

	* ./: Removed ylwrap from svn:ignore.

Tue Apr 05 22:34:16 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparsertest.cc,queryparser/Makefile.am,
	  tests/Makefile.am: Moved queryparsertest into tests/.

Tue Apr 05 22:15:05 BST 2005  Olly Betts <olly@survex.com>

	* examples/: Updated svn:ignore property.

Tue Apr 05 21:34:13 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/Makefile.am,configure.ac,extra/xapian/queryparser.h,
	  extra/,include/Makefile.am,Makefile.am: Move extra/ to queryparser/;
	  Merge extra/xapian/ into include/xapian/.

Tue Apr 05 16:37:32 BST 2005  Olly Betts <olly@survex.com>

	* m4/xapian.m4: Fix m4 quoting (argh!)

Tue Apr 05 16:28:06 BST 2005  Olly Betts <olly@survex.com>

	* m4/xapian.m4: Fix XO_LIB_XAPIAN to trim off any _svn6789 from
	  XAPIAN_VERSION.

Tue Apr 05 16:17:31 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Fix m4 quoting.

Tue Apr 05 15:16:38 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: #define VERSION in version.h shouldn't include any
	  _svn6789 suffix.

Tue Apr 05 13:28:23 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Snapshot generator now appends _svn6789 or similar to
	  the version string, so take that into account when finding REVISION.

Tue Apr 05 12:55:52 BST 2005  Olly Betts <olly@survex.com>

	* ChangeLog.examples,Makefile.am,examples/ChangeLog: Move
	  xapian-examples ChangeLog to ChangeLog.examples in the top-level
	  and include in the tarball.
